--- a/creational/abstract-factory/pom.xml
+++ b/creational/abstract-factory/pom.xml
@@ -2,9 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <parent>
+        <groupId>com.iphayao</groupId>
+        <artifactId>creational</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.iphayao.creational</groupId>
     <artifactId>abstract-factory</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
