--- a/creational/pom.xml
+++ b/creational/pom.xml
@@ -21,6 +21,7 @@
         <module>builder</module>
         <module>prototype</module>
         <module>adapter</module>
+        <module>bridge</module>
     </modules>
 
 </project>
