--- a/structural/bridge/pom.xml
+++ b/structural/bridge/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>creational</artifactId>
+        <artifactId>structural</artifactId>
         <groupId>com.iphayao</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>adapter</artifactId>
+    <artifactId>bridge</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
