--- a/structural/adapter/pom.xml
+++ b/structural/adapter/pom.xml
@@ -3,22 +3,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
+        <artifactId>structural</artifactId>
         <groupId>com.iphayao</groupId>
-        <artifactId>design-pattern</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>creational</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <artifactId>adapter</artifactId>
+    <packaging>jar</packaging>
 
-    <modules>
-        <module>factory-method</module>
-        <module>abstract-factory</module>
-        <module>singleton</module>
-        <module>builder</module>
-        <module>prototype</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
