--- a/structural/adapter/pom.xml
+++ b/structural/adapter/pom.xml
@@ -10,8 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>adapter</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+    
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
