--- a/structural/pom.xml
+++ b/structural/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>adapter</module>
         <module>bridge</module>
+        <module>filter</module>
     </modules>
 
 </project>
