--- a/structural/pom.xml
+++ b/structural/pom.xml
@@ -17,6 +17,7 @@
         <module>adapter</module>
         <module>bridge</module>
         <module>filter</module>
+        <module>composite</module>
     </modules>
 
 </project>
