Add Decorator Pattern

--- a/structural/pom.xml
+++ b/structural/pom.xml
@@ -18,6 +18,7 @@
         <module>bridge</module>
         <module>filter</module>
         <module>composite</module>
+        <module>decorator</module>
     </modules>
 
 </project>
