--- a/structural/pom.xml
+++ b/structural/pom.xml
@@ -19,6 +19,7 @@
         <module>filter</module>
         <module>composite</module>
         <module>decorator</module>
+        <module>facade</module>
     </modules>
 
 </project>
