Add Flyweight Pattern

--- a/structural/pom.xml
+++ b/structural/pom.xml
@@ -20,6 +20,7 @@
         <module>composite</module>
         <module>decorator</module>
         <module>facade</module>
+        <module>flyweight</module>
     </modules>
 
 </project>
