Add Proxy Pattern

--- a/structural/pom.xml
+++ b/structural/pom.xml
@@ -21,6 +21,7 @@
         <module>decorator</module>
         <module>facade</module>
         <module>flyweight</module>
+        <module>proxy</module>
     </modules>
 
 </project>
