Add Iterator Pattern

--- a/behavioral/pom.xml
+++ b/behavioral/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>chain-of-responsibility</module>
         <module>interpreter</module>
+        <module>iterator</module>
     </modules>
 
 
