--- a/behavioral/pom.xml
+++ b/behavioral/pom.xml
@@ -17,6 +17,7 @@
         <module>chain-of-responsibility</module>
         <module>interpreter</module>
         <module>iterator</module>
+        <module>mediator</module>
     </modules>
 
 
