Add Memento Pattern

--- a/behavioral/pom.xml
+++ b/behavioral/pom.xml
@@ -18,6 +18,7 @@
         <module>interpreter</module>
         <module>iterator</module>
         <module>mediator</module>
+        <module>memento</module>
     </modules>
 
 
