--- a/behavioral/pom.xml
+++ b/behavioral/pom.xml
@@ -19,6 +19,7 @@
         <module>iterator</module>
         <module>mediator</module>
         <module>memento</module>
+        <module>observer</module>
     </modules>
 
 
