Add State Pattern

--- a/behavioral/pom.xml
+++ b/behavioral/pom.xml
@@ -20,6 +20,7 @@
         <module>mediator</module>
         <module>memento</module>
         <module>observer</module>
+        <module>state</module>
     </modules>
 
 
