Add Strategy Pattern

--- a/behavioral/pom.xml
+++ b/behavioral/pom.xml
@@ -21,6 +21,7 @@
         <module>memento</module>
         <module>observer</module>
         <module>state</module>
+        <module>strategy</module>
     </modules>
 
 
