Add Template Pattern

--- a/behavioral/pom.xml
+++ b/behavioral/pom.xml
@@ -22,6 +22,7 @@
         <module>observer</module>
         <module>state</module>
         <module>strategy</module>
+        <module>template</module>
     </modules>
 
 
