Add Visitor Pattern

--- a/behavioral/pom.xml
+++ b/behavioral/pom.xml
@@ -23,6 +23,7 @@
         <module>state</module>
         <module>strategy</module>
         <module>template</module>
+        <module>visitor</module>
     </modules>
 
 
