Add Command Pattern

--- a/behavioral/pom.xml
+++ b/behavioral/pom.xml
@@ -15,6 +15,7 @@
 
     <modules>
         <module>chain-of-responsibility</module>
+        <module>command</module>
         <module>interpreter</module>
         <module>iterator</module>
         <module>mediator</module>
