Add Lazy Initialization Pattern

--- a/creational/pom.xml
+++ b/creational/pom.xml
@@ -19,6 +19,7 @@
         <module>singleton</module>
         <module>builder</module>
         <module>prototype</module>
+        <module>lazy-initialization</module>
     </modules>
 
 </project>
