--- a/creational/pom.xml
+++ b/creational/pom.xml
@@ -21,6 +21,7 @@
         <module>prototype</module>
         <module>lazy-initialization</module>
         <module>dependency-injection</module>
+        <module>multiton</module>
     </modules>
 
 </project>
